# pyamtrack

./: .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  appveyor.yml  full_build_cmake.sh  install_deps.sh  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  linux-reusable.yml  macos-reusable.yml  main.yml  wheels.yml  windows-reusable.yml  windows.yml
.travis/: install_osx.sh
cmake/: pyamtrackConfig.cmake.in
docs/: README.md  conf.py  index.rst  pre-commit.md  tests.md
examples/: example.ipynb  stopping.ipynb
pyamtrack/: __init__.py  pyamtrack.py  run_pyamtrack.py
scripts/: build_gsl.ps1  build_gsl.sh  build_linux.sh
src/: main.cpp  pyamtrack.cpp  wrapper_template.h
src/converters/: beta_from_energy.cpp  beta_from_energy.h  converter_bindings.cpp  converters_bindings.cpp  energy_from_beta.cpp  energy_from_beta.h  max_E_transfer_MeV.cpp  max_E_transfer_MeV.h  wrapper_template.h
src/electron_range/: electron_range.cpp  electron_range.h  electron_range_bindings.cpp
src/materials/: materials.cpp  materials.h  materials_bindings.cpp
src/particles/: particles.cpp  particles.h  particles_bindings.cpp
src/pyamtrack/: __init__.py  _version.py
src/pyamtrack/converters/: __init__.py
src/stopping/: bortfeld_proton_range.cpp  bortfeld_proton_range.h  electron_range.cpp  electron_range.h  mass_stopping_power.cpp  mass_stopping_power.h  stopping_bindings.cpp  stopping_power.cpp  stopping_power.h
src/wrapper/: cartesian_product.h  multi_argument.h  single_argument.h  types.h  utils.h
tests/: conftest.py  test_beta.py  test_cartesian_product.py  test_converters.py  test_electron_range.py  test_electron_range_models.py  test_energy_from_beta.py  test_function_behavior.py  test_materials.py  test_multidim_input.py  test_parametrized.py  test_particles.py  test_pyamtrack.py  test_stopping.py  test_stopping_models.py
