[build-system]
requires = ["scikit-build-core>0.10", "pybind11", "setuptools_scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "pyamtrack"
description = "Python bindings for libamtrack"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.9"
license = { file = "LICENSE" }
dynamic = ["version"]
#dependencies = ["numpy"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[tool.cibuildwheel]
archs = ["auto64"]
skip= ["cp36-*", "cp37-*", "cp38-*", "pp*"]

[tool.cibuildwheel.linux]
before-all = "./scripts/build_gsl.sh"

[tool.cibuildwheel.macos]
before-all = "sudo env MACOSX_DEPLOYMENT_TARGET=11.0 ./scripts/build_gsl.sh"

[tool.cibuildwheel.windows]
before-all = "powershell.exe -ExecutionPolicy Bypass -File scripts/build_gsl.ps1"