[build-system]
requires = ["scikit-build-core>0.10", "pybind11", "setuptools_scm>=8"]
build-backend = "scikit_build_core.build"

[project]
name = "pyamtrack"
dynamic = ["version"]
description = "Python bindings for libamtrack"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.9"
license = { file = "LICENSE" }
#dependencies = ["numpy"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/pyamtrack/_version.py"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "src/pyamtrack/_version.py"

[tool.cibuildwheel]
archs = ["auto64"]
skip= ["cp36-*", "cp37-*", "cp38-*", "pp*"]

[tool.cibuildwheel.linux]
before-all = "./scripts/build_gsl.sh"

[tool.cibuildwheel.macos]
before-all = "sudo env MACOSX_DEPLOYMENT_TARGET=11.0 ./scripts/build_gsl.sh"

[tool.cibuildwheel.windows]
before-all = "powershell.exe -ExecutionPolicy Bypass -File scripts/build_gsl.ps1"